--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -70,3 +70,34 @@
   font-weight: 400;
   line-height: 100%;
 }
+
+.head-text {
+  font-family: 'DM Sans';
+  font-size: 80px;
+  font-weight: 500;
+  line-height: 104px;
+  letter-spacing: -0.022em;
+}
+
+.parag-text {
+  font-family: 'Poppins';
+  font-size: 21px;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+.pag-text {
+  font-family: 'DM Sans';
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 21px;
+  letter-spacing: -0.025em;
+}
+
+.slide-text {
+  font-family: 'DM Sans';
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 31px;
+  letter-spacing: -0.046em;
+}
