--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -75,7 +75,7 @@
   font-family: 'DM Sans';
   font-size: 80px;
   font-weight: 500;
-  line-height: 104px;
+  line-height: 80px;
   letter-spacing: -0.022em;
 }
 
@@ -100,4 +100,20 @@
   font-weight: 500;
   line-height: 31px;
   letter-spacing: -0.046em;
+}
+
+.label-text {
+  font-family: 'DM Sans';
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 27px;
+  letter-spacing: -0.025em;
+}
+
+.h-text {
+  font-family: 'DM Sans';
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 32px;
+  letter-spacing: -0.045em;
 }
