--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -1,6 +1,7 @@
 $lime: rgb(19, 204, 0);
 $lime-light: rgb(0, 255, 0);
 $lime-green: rgb(56, 142, 60);
+$green: rgb(67, 177, 129);
 $gray-blue: rgb(41, 41, 48);
 $gray: rgb(115, 115, 115);
 $light-peri: rgb(236, 242, 246);
@@ -13,6 +14,6 @@ $silver: rgba(111, 111, 111, 0.53);
 $dark: rgb(147, 147, 151);
 $red: rgb(255, 0, 0);
 $dark-silver: rgb(79, 79, 79);
-$black-shadow: rgba(0, 0, 0, 0.6);
+$black-shadow: rgba(0, 0, 0, 0.4);
 $ashes: rgb(66, 68, 78);
-$black: #151617;
+$black: rgb(21, 22, 23);
