--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -11,6 +11,7 @@ $sea-green: rgb(39, 182, 116);
 $blue: rgb(73, 71, 229);
 $yellow: rgb(255, 210, 71);
 $silver: rgba(111, 111, 111, 0.53);
+$light-silver: rgba(255, 255, 255, 0.5);
 $dark: rgb(147, 147, 151);
 $red: rgb(255, 0, 0);
 $dark-silver: rgb(79, 79, 79);
