--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -117,3 +117,17 @@
   line-height: 32px;
   letter-spacing: -0.045em;
 }
+
+.des-text {
+  font-family: 'Poppins';
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 34px;
+}
+
+.bold-text {
+  font-family: 'Poppins';
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 100%;
+}
